@@ -24,8 +24,16 @@ W: http://www.firstpeer.com/
 D: Funded half of initial release.
 D: Lots of valuable API feedback.
 
+N: Ilya Goldberg
+E: igg@mit.edu
+D: Client-side support for SSL.
+
 N: Jack Jansen
 D: Python Base64 code (modified for use with library).
+
+N: Adrian Likins
+E: alikins@redhat.com
+D: Lots of good, real-world suggestions for improvement.
 
 N: Eric Kidd
 E: eric.kidd@pobox.com
